fix: some ignore
Signed-off-by: lishengjie <416756910@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 ---------------------------------------java.ignore
+*.class
 
 -------------------------------------------idea.ignore
 
-/out
+out/
+.idea/workspace.xml
+.idea/caches
