feat: 添加列表详情查询
Signed-off-by: lishengjie <416756910@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 
 -------------------------------------------idea.ignore
 
-out/
+out/*
 !out/notes/
 
+.idea/uiDesigner.xml
 .idea/workspace.xml
 .idea/caches
