--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 
     <servlet>
         <servlet-name>AccessServlet</servlet-name>
-        <servlet-class>main.notes.servlet.AccessServlet</servlet-class>
+        <servlet-class>main.notes.servlet.database.AccessServlet</servlet-class>
     </servlet>
 
     <!--所有文件详情-->
@@ -23,7 +23,7 @@
 
     <servlet>
         <servlet-name>DocDetailServlet</servlet-name>
-        <servlet-class>main.notes.servlet.DocDetailServlet</servlet-class>
+        <servlet-class>main.notes.servlet.filetrans.DocDetailServlet</servlet-class>
     </servlet>
 
     <!--食锦记 列表-->
@@ -34,7 +34,7 @@
 
     <servlet>
         <servlet-name>FoodListServlet</servlet-name>
-        <servlet-class>main.notes.servlet.FoodListServlet</servlet-class>
+        <servlet-class>main.notes.servlet.list.category.FoodListServlet</servlet-class>
     </servlet>
 
     <!--心晴 列表-->
@@ -45,7 +45,7 @@
 
     <servlet>
         <servlet-name>FeelListServlet</servlet-name>
-        <servlet-class>main.notes.servlet.FeelListServlet</servlet-class>
+        <servlet-class>main.notes.servlet.list.category.FeelListServlet</servlet-class>
     </servlet>
 
     <!--轶事 列表-->
@@ -56,6 +56,6 @@
 
     <servlet>
         <servlet-name>StoryListServlet</servlet-name>
-        <servlet-class>main.notes.servlet.StoryListServlet</servlet-class>
+        <servlet-class>main.notes.servlet.list.category.StoryListServlet</servlet-class>
     </servlet>
 </web-app>
