--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <!--所有文件详情-->
     <servlet-mapping>
         <servlet-name>DocDetailServlet</servlet-name>
-        <url-pattern>/docs/*</url-pattern>
+        <url-pattern>/MyDocs/*</url-pattern>
     </servlet-mapping>
 
     <servlet>
